# HyluxEngine

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
Engine/Editor/: CMakeLists.txt
Engine/Editor/EditorApp/: CMakeLists.txt
Engine/Editor/EditorApp/Source/: EditorApp.cpp  EditorApp.h  Main.cpp
Engine/Editor/EditorLib/: CMakeLists.txt
Engine/Editor/EditorLib/Source/: EditorLib.cpp  EditorLib.h
Engine/Editor/Source/: Main.cpp
Engine/Runtime/: CMakeLists.txt  pch.h
Engine/Runtime/Asset/: AssetBase.h  AssetId.h  AssetLoaderContext.h  AssetRef.h  AssetRegistry.cpp  AssetRegistry.h  AssetSubsystem.cpp  AssetSubsystem.h  AssetTypeId.h  Guid.cpp  Guid.h  IAssetStreamer.h
Engine/Runtime/Asset/Cooked/: CookedFormat.h  CookedHeader.h  CookedReader.cpp  CookedReader.h
Engine/Runtime/Asset/Loaders/: MaterialInstanceLoader.cpp  MaterialInstanceLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h
Engine/Runtime/Asset/Types/: MaterialAsset.cpp  MaterialAsset.h  MaterialInstanceAsset.h  MaterialParameter.h  MeshAsset.h  NameHash.h  PhysicalMeshAsset.h  PhysicalTextureAsset.h  SparseTextureAsset.h  TextureAsset.h  VirtualMeshAsset.h  VirtualTextureAsset.h
Engine/Runtime/Core/: Guid.cpp  Guid.h
Engine/Runtime/Core/Async/: CancellationToken.h  Future.h  IExecutor.h  ParallelFor.h  TaskGraph.cpp  TaskGraph.h  Unit.h  WhenAll.h  WorkStealingDeque.h  WorkerThreadPool.cpp  WorkerThreadPool.h
Engine/Runtime/Core/Concurrency/: ThreadAffinity.cpp  ThreadAffinity.h
Engine/Runtime/Core/Containers/: RefLruCache.h  SmallVector.h
Engine/Runtime/Core/IO/: FileMode.h  IFile.h  IFileSystem.h  PhysicalFileSystem.cpp  PhysicalFileSystem.h
Engine/Runtime/Core/Logging/: AsyncDispatcher.cpp  AsyncDispatcher.h  CoreLogCategories.cpp  CoreLogCategories.h  ILogSink.h  LogCategory.h  LogDispatcher.h  LogLevel.h  LogRecord.h  LogSystem.cpp  LogSystem.h  Logger.cpp  Logger.h  SyncDispatcher.cpp  SyncDispatcher.h
Engine/Runtime/Core/Math/: Common.h  Forward.h  Frustum.cpp  Frustum.h  Mat3.cpp  Mat3.h  Mat3x4.cpp  Mat3x4.h  Mat4.cpp  Mat4.h  Quat.cpp  Quat.h  Simd.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Engine/Runtime/Core/Memory/: EnableRefFromThis.h  FrameAllocator.cpp  FrameAllocator.h  MakeRef.h  Memory.h  Ref.h  RefCounted.h  WeakRef.h
Engine/Runtime/Core/Paths/: EnginePaths.cpp  EnginePaths.h
Engine/Runtime/Core/Reflection/: Any.h  EnumInfo.cpp  EnumInfo.h  Field.cpp  Field.h  Method.cpp  Method.h  Reflection.h  ReflectionMacros.h  TypeId.h  TypeInfo.cpp  TypeInfo.h  TypeName.h  TypeRegistry.cpp  TypeRegistry.h
Engine/Runtime/Core/Utils/: Assert.cpp  Assert.h  Flags.h  Hash.h  ScopeGuard.h
Engine/Runtime/Engine/: Engine.cpp  Engine.h  EngineLoop.cpp  EngineLoop.h  ISubsystem.h  ITickable.h
Engine/Runtime/RHI/: CreateRHIInstance.h  IRHIAccelerationStructure.h  IRHIAdapter.h  IRHIBindlessHeap.h  IRHIBuffer.h  IRHICommandList.h  IRHICommandPool.h  IRHIDescriptorSet.h  IRHIDevice.h  IRHIFence.h  IRHIInstance.h  IRHIObject.h  IRHIPipeline.h  IRHIPipelineCache.h  IRHIPipelineLayout.h  IRHIQueryPool.h  IRHIQueue.h  IRHISampler.h  IRHIShaderModule.h  IRHISurface.h  IRHITexture.h  IRHIVendorExtension.h  RHIBarriers.h  RHIDeviceDesc.h  RHIEnums.h  RHIFeature.h  RHIFormat.h  RHIForward.h  RHIInstanceDesc.h  RHINativeHandle.h  RHIPipelineDesc.h  RHIRenderPassAttachments.h  RHIResourceDesc.h  RHISubsystem.cpp  RHISubsystem.h  RHITypes.h  RHIValidation.h
Engine/Runtime/RHI/Capture/: IGpuRangeProfiler.h  IGpuTraceCapture.h  IGraphicsCaptureTool.h  IShaderProfiler.h
Engine/Runtime/RHI/Diagnostics/: IGpuCrashReporter.h
Engine/Runtime/RHI/Validation/: RhiValidationLayer.cpp  RhiValidationLayer.h
Engine/Runtime/RHI/Vulkan/: CreateRHIInstanceVulkan.cpp  VulkanAccelerationStructure.h  VulkanAdapter.cpp  VulkanAdapter.h  VulkanBindlessHeap.cpp  VulkanBindlessHeap.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDebugUtils.cpp  VulkanDebugUtils.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceResources.cpp  VulkanEnums.cpp  VulkanEnums.h  VulkanFence.cpp  VulkanFence.h  VulkanFormat.cpp  VulkanFormat.h  VulkanInstance.cpp  VulkanInstance.h  VulkanObject.cpp  VulkanObject.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanQueryPool.cpp  VulkanQueryPool.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSampler.cpp  (+12 more)
Engine/Runtime/RenderGraph/: RGAccess.h  RGBuilder.cpp  RGBuilder.h  RGComputePass.cpp  RGComputePass.h  RGContext.cpp  RGContext.h  RGCopyPass.cpp  RGCopyPass.h  RGHandle.h  RGPass.cpp  RGPass.h  RGRasterBuilder.cpp  RGRasterBuilder.h  RGRasterPass.cpp  RGRasterPass.h  RGRayTracingPass.cpp  RGRayTracingPass.h  RenderGraph.cpp  RenderGraph.h
Engine/Runtime/RenderGraph/Internal/: RGNode.h  RGResourceRegistry.cpp  RGResourceRegistry.h  RGTransientResourcePool.cpp  RGTransientResourcePool.h
Engine/Runtime/Renderer/: RendererForward.h
Engine/Runtime/Renderer/Diagnostics/: RendererStats.h
Engine/Runtime/Renderer/DrawList/: DrawList.cpp  DrawList.h  DrawListBuilder.cpp  DrawListBuilder.h  DrawListDesc.h  DrawSortKey.h  InstanceDataLayout.h
Engine/Runtime/Renderer/Material/: MaterialAsset.cpp  MaterialAsset.h  MaterialInstance.cpp  MaterialInstance.h  MaterialParameter.h  MaterialProxy.cpp  MaterialProxy.h  MaterialProxyCache.cpp  MaterialProxyCache.h  MaterialSnapshot.h  NameHash.h
Engine/Runtime/Renderer/Mesh/: MeshAsset.h
Engine/Runtime/Renderer/Path/: IRenderPath.h  (+8 more)
Engine/Runtime/Shader/: PermutationKey.cpp  PermutationKey.h  ShaderId.h  ShaderRef.h  ShaderReflection.h  ShaderSubsystem.cpp  ShaderSubsystem.h
Engine/Runtime/Worker/: WorkerSubsystem.cpp  WorkerSubsystem.h
Engine/Tests/Editor/: CMakeLists.txt  EngineLoopTests.cpp  Main.cpp  MenuRegistryTests.cpp  SelectionContextTests.cpp  ShaderManifestTests.cpp
Engine/Tests/Runtime/: CMakeLists.txt  Main.cpp
(+204 files in other folders)
