set(HYLUX_RUNTIME_TARGET HyluxRuntime)

file(GLOB_RECURSE HYLUX_RUNTIME_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

set(HYLUX_RUNTIME_PCH_HEADER pch.h)

add_library(${HYLUX_RUNTIME_TARGET} STATIC ${HYLUX_RUNTIME_SOURCES})

add_library(Hylux::Runtime ALIAS ${HYLUX_RUNTIME_TARGET})

target_include_directories(${HYLUX_RUNTIME_TARGET}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:include>
)

target_compile_features(${HYLUX_RUNTIME_TARGET} PUBLIC cxx_std_20)

target_precompile_headers(${HYLUX_RUNTIME_TARGET} PRIVATE ${HYLUX_RUNTIME_PCH_HEADER})

set_target_properties(${HYLUX_RUNTIME_TARGET} PROPERTIES
    FOLDER "Hylux"
    DEBUG_POSTFIX "d"
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source" FILES ${HYLUX_RUNTIME_SOURCES})
